--- a/DrupalDockerFile/Dockerfile
+++ b/DrupalDockerFile/Dockerfile
@@ -1,4 +1,4 @@
-FROM composer:latest
+FROM drupalwxt/gitlab-ci
 
 # Install php-gd
 RUN apk add --repository http://dl-cdn.alpinelinux.org/alpine/edge/main libpng-dev && docker-php-ext-install gd && rm -rf /var/cache/apk/*
@@ -15,3 +15,6 @@ RUN composer global require hirak/prestissimo
 
 # Download and install Drush launcher
 RUN php -r "copy('https://github.com/drush-ops/drush-launcher/releases/download/0.4.2/drush.phar', 'drush.phar');" && chmod +x drush.phar && mv drush.phar /usr/bin/drush
+
+ENTRYPOINT ["docker-entrypoint.sh"]
+CMD ["sh"]
